Fixed double scrollbar

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -52,6 +52,7 @@ iframe {
     position:relative;
     padding:0px;
     border:0px;
+    overflow-y:auto;
     <!--z-index: -1;-->
 }
 
@@ -77,8 +78,6 @@ body {
     
     width:100%;
     height:100%;
-    
-    overflow-y: hidden;
     
     font-size: 16px;
     font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
